# BNO085

./: .gitignore  .gitmodules  CMakeLists.txt  ClassGoals.txt  idea.txt
include/: BNO085.h  GUI.h  I2C_Device.h  I2C_HAL.h  Visualization.h  sh2_c_interface.h
src/: BNO085.cpp  GUI.cpp  I2C_Device.cpp  I2C_HAL.cpp  Visualization.cpp  main.cpp
